UI & Functionality: general improvements + new i18n content
  - Improved visuals and behavior in key components (ProfileMinibox, UpdatePost, ChatHeader, Banner, DisplayRoleInfo)
  - Added reusable ConfirmDialog component for modal confirmations
  - Adjusted chat logic: updated participants and conversations context/actions
  - Updated translation files (chat, music, profile, ui) in both English and Spanish
  - Refreshed project structure and backend function notes (.gitignore, documentation)
  - General polish and UX refinements in preparation for deployment

--- a/src/locales/en/music.json
+++ b/src/locales/en/music.json
@@ -1,10 +1,10 @@
 {
   "roles": {
-    "title": "Music Roles",
+    "title": "Music Profile",
     "none": "No music-related roles found.",
     "noData": "No information available for this role.",
     "detailsTitle": "{{role}} Details",
-    "instrumentalist": "Instrumentalist",
+    "instrumentalist": "Instruments",
     "singer": "Singer",
     "dj": "DJ",
     "producer": "Producer",
@@ -39,7 +39,7 @@
     "expert": "Expert"
   },
   "edit": {
-    "title": "Edit Music Information",
+    "title": "Edit Music Profile",
     "addRoleTitle": "Add a new role",
     "selectLabel": "Select a Role",
     "defaultOption": "Choose a role",
