--- a/src/locales/en/ui.json
+++ b/src/locales/en/ui.json
@@ -88,6 +88,6 @@
    "sidebar": {
     "viewProfile": "View Profile",
     "editProfile": "Edit Profile",
-    "editMusicInfo": "Edit Music Info"
+    "editMusicInfo": "Edit Music Profile"
   }
 }
