--- a/src/locales/es/profile.json
+++ b/src/locales/es/profile.json
@@ -24,7 +24,7 @@
       "title": "Editar Perfil",
       "navigation": {
         "editProfile": "Editar Perfil",
-        "editMusicInfo": "Editar Información Musical"
+        "editMusicInfo": "Editar Perfil Musical"
       },
       "labels": {
         "bio": "Bio",
