--- a/src/locales/es/ui.json
+++ b/src/locales/es/ui.json
@@ -88,6 +88,6 @@
    "sidebar": {
     "viewProfile": "Ver Perfil",
     "editProfile": "Editar Perfil",
-    "editMusicInfo": "Editar Información Musical"
+    "editMusicInfo": "Editar Perfil Musical"
   }
 }
