--- a/src/locales/en/chat.json
+++ b/src/locales/en/chat.json
@@ -14,7 +14,21 @@
     "buttons": {
       "convertToGroup": "Convert to group chat",
       "showList": "Show conversation list",
-      "hideList": "Hide conversation list"
+      "hideList": "Hide conversation list",
+      "leaveConversation": "Leave Chat"
+    },
+    "convert": {
+      "title": "Convert to Group Chat",
+      "message": "Do you want to convert this one-on-one chat into a group conversation?",
+      "confirm": "Create Group",
+      "cancel": "Cancel"
+    },
+    "leave": {
+      "title": "Leave conversation?",
+      "groupMessage": "Are you sure you want to leave this group?",
+      "directMessage": "Are you sure you want to delete this conversation?",
+      "confirm": "Yes, Leave",
+      "cancel": "Cancel"
     },
     "search": {
       "toggle": "Add participants",
