--- a/src/locales/es/chat.json
+++ b/src/locales/es/chat.json
@@ -14,7 +14,21 @@
     "buttons": {
       "convertToGroup": "Convertir en grupo",
       "showList": "Mostrar lista de conversaciones",
-      "hideList": "Ocultar lista de conversaciones"
+      "hideList": "Ocultar lista de conversaciones",
+      "leaveConversation": "Salir del chat"
+    },
+    "convert": {
+      "title": "Convertir en chat de grupo",
+      "message": "¿Deseas convertir este chat uno a uno en una conversación de grupo?",
+      "confirm": "Crear grupo",
+      "cancel": "Cancelar"
+    },
+    "leave": {
+      "title": "¿Salir del chat?",
+      "groupMessage": "¿Seguro que deseas salir del grupo?",
+      "directMessage": "¿Seguro que deseas eliminar esta conversación?",
+      "confirm": "Sí, salir",
+      "cancel": "Cancelar"
     },
     "search": {
       "toggle": "Agregar participantes",
