fix: handle GitHub Pages 404 routing to support SPA deep links
- Replaced 404.html to preserve original path and redirect to index.html
- Added script to index.html to restore original path from sessionStorage
- Fixes issue where direct links (e.g. /account-confirmed) caused 404
- Ensures Supabase auth redirect with tokens works correctly in production

--- a/src/locales/en/music.json
+++ b/src/locales/en/music.json
@@ -8,7 +8,8 @@
     "singer": "Singer",
     "dj": "DJ",
     "producer": "Producer",
-    "composer": "Composer"
+    "composer": "Composer",
+    "custom": "Custom Role"
   },
   "fields": {
     "instrument": "Instrument",
