--- a/src/locales/es/music.json
+++ b/src/locales/es/music.json
@@ -8,7 +8,8 @@
     "singer": "Cantante",
     "dj": "DJ",
     "producer": "Productor",
-    "composer": "Compositor"
+    "composer": "Compositor",
+    "custom": "Rol Personalizado"
   },
   "fields": {
     "instrument": "Instrumento",
