Minor ui changes and fixes

--- a/src/locales/en/music.json
+++ b/src/locales/en/music.json
@@ -65,7 +65,9 @@
       "url": "URL",
       "urlPlaceholder": "https://...",
       "title": "Title (optional)",
-      "titlePlaceholder": "My video",
+      "titlePlaceholder": "My video/audio title",
+      "description": "Description (optional)",
+      "descriptionPlaceholder": "My video/audio description",
       "type": "Media Type",
       "typePlaceholder": "Select an option",
       "add": "Add",
