--- a/src/locales/es/music.json
+++ b/src/locales/es/music.json
@@ -66,7 +66,9 @@
       "url": "URL",
       "urlPlaceholder": "https://...",
       "title": "Título (opcional)",
-      "titlePlaceholder": "Mi video",
+      "titlePlaceholder": "Mi título de video/audio",
+      "description": "Descripción (opcional)",
+      "descriptionPlaceholder": "Mi descripción de video/audio",
       "type": "Tipo de medio",
       "typePlaceholder": "Selecciona una opción",
       "add": "Agregar",
