fixing ui issues

--- a/src/locales/en/music.json
+++ b/src/locales/en/music.json
@@ -60,7 +60,7 @@
     }
   },
   "media": {
-    "title": "Music Media",
+    "title": "Musical Content",
     "form": {
       "url": "URL",
       "urlPlaceholder": "https://...",
