--- a/src/locales/es/music.json
+++ b/src/locales/es/music.json
@@ -61,7 +61,7 @@
     }
   },
   "media": {
-    "title": "Medios musicales",
+    "title": "Contenido Musical",
     "form": {
       "url": "URL",
       "urlPlaceholder": "https://...",
