refactor: unify actions with key factories & cache helpers, add chat message edit/delete, fix reply profile bug
- Refactored all music, profile, and social actions to use new key factory helpers (`musicKeys.js`, `profileKeys.js`, `socialKeys.js`) and generic cacheHandler for robust optimistic updates and cache management.
- Added support for editing and deleting own messages in chat conversations.
- Fixed: Replies now always show correct profile/avatar info for all users by recursively collecting all profile_ids in comments and replies.
- Updated translation files and UI components for consistency.
- General code cleanup and improved maintainability across actions and components.

--- a/src/locales/en/chat.json
+++ b/src/locales/en/chat.json
@@ -43,5 +43,19 @@
   "input": {
     "button": "Send",
     "placeholder": "Write a message..."
+  },
+  "message": {
+    "deleted": "This message has been deleted.",
+    "edit": {
+      "title": "Edit Message",
+      "placeholder": "Edit your message..."
+    },
+    "delete": {
+      "title": "Delete Message"
+    },
+    "reply": {
+      "title": "Reply to Message",
+      "placeholder": "Type your reply..."
+    }
   }
 }
