--- a/src/locales/en/profile.json
+++ b/src/locales/en/profile.json
@@ -24,6 +24,15 @@
       "gender": "Gender",
       "age": "Age",
       "years": "years"
+    },
+    "connection": {
+      "loading": "Checking connection...",
+      "connect": "Connect",
+      "disconnect": "Disconnect",
+      "pending": "Pending",
+      "block": "Block",
+      "unblock": "Unblock",
+      "blockedByOther": "You are blocked by this user."
     } 
   },
   "edit": {
