r Refactor and enhance group chat management UI/logic
- Moved all group management (avatar/title edit, participant actions) from ChatHeader.jsx to new GroupOverview.jsx modal
- Added robust participant add/promote/remove/leave logic with React Query and cacheHandler, using optimistic updates
- Refactored direct chat actions into a right-aligned three-dots menu (visit profile, convert to group, delete)
- Added i18n for all new UI in English and Spanish
- Fixed menu overflow, avatar consistency, and React hooks usage
- Improved UI/UX for group management, including participant search/add, menu direction, and confirmation dialogs
- Ensured no duplicate participants after promote/remove actions

--- a/src/locales/en/chat.json
+++ b/src/locales/en/chat.json
@@ -6,7 +6,8 @@
     "group": {
       "editTitle": "Click to edit group title",
       "untitled": "Untitled",
-      "editAvatar": "Edit group avatar"
+      "editAvatar": "Edit group avatar",
+      "info": "Group info"
     },
     "direct": {
       "untitled": "Untitled"
@@ -15,7 +16,8 @@
       "convertToGroup": "Convert to group chat",
       "showList": "Show conversation list",
       "hideList": "Hide conversation list",
-      "leaveConversation": "Leave Chat"
+      "leaveConversation": "Leave Chat",
+      "leaveGroup": "Leave Group"
     },
     "convert": {
       "title": "Convert to Group Chat",
@@ -57,5 +59,33 @@
       "title": "Reply to Message",
       "placeholder": "Type your reply..."
     }
+  },
+  "groupOverview": {
+    "participants": "Participants",
+    "role": {
+      "admin": "admin",
+      "member": "member"
+    },
+    "actions": {
+      "promote": "Promote to admin",
+      "remove": "Remove participant",
+      "viewProfile": "View profile",
+      "cancel": "Cancel",
+      "confirm": "Confirm"
+    },
+    "menu": {
+      "open": "Open participant actions"
+    },
+    "untitled": "Untitled Group",
+    "confirm": {
+      "remove": "Remove participant?",
+      "promote": "Promote to admin?",
+      "viewProfile": "View profile",
+      "confirm": "Confirm",
+      "cancel": "Cancel"
+    }
+  },
+  "profile": {
+    "viewProfile": "View profile"
   }
 }
