feat: Implement fully functional hashtag system with dedicated hashtag pages
- Users can now click on any hashtag in posts or the Explore page to view all related content.
- Added a new /hashtag/:tag route and Hashtag page that displays all posts and profiles associated with the selected hashtag.
- Hashtag page features a navigation bar to toggle between posts and profiles for a clean, focused experience.
- Updated PostCard to ensure hashtag links are correctly formatted (no # in the URL, but # shown in the label).
- Explore page hashtags are now clickable and route to the hashtag page.
- Refactored PostsList to support direct rendering of posts for hashtag results (without search bar).
- Internationalized all new UI elements and updated translation files.
- Improved generic optimistic update logic to support custom idKey functions for composite keys, keeping cache helpers reusable.
- Updated README to reflect the new hashtag system and its capabilities.

This completes the hashtag system feature: users can discover and explore content by hashtag, with a seamless and intuitive experience.

--- a/src/locales/en/posts.json
+++ b/src/locales/en/posts.json
@@ -10,6 +10,9 @@
     "noMatch": "No posts match your search.",
     "noImages": "No images available for this post."
   },
+  "hashtags": {
+    "empty": "No posts found with this hashtag."
+  },
   "create": {
     "title": "Create a New Post",
     "labels": {
