Landing page overhaul, advanced chat logic, i18n, and UI/UX improvements
- Overhauled LandingPage: replaced old screenshots, added new i18n-powered feature carousels for Profile, Chat, Explore, and Posts, each with 3 EN/ES screenshots and captions.
- Updated landing page "How It Works" section with a modern, responsive timeline/table and accurate app journey steps.
- All landing page text and screenshot metadata now fully internationalized (en/es).
- Replaced old musician images with new feature-specific screenshots for both languages.
- Improved chat logic in ProfileHeader and ProfileMinibox: always open existing one-on-one if present, otherwise group, only create new one-on-one if neither exists (prevents duplicate chats).
- Fixed gender select in EditProfile: now always shows the correct i18n value and current selection.
- Updated Select component to support controlled value/onChange for i18n and form compatibility.
- Various UI/UX tweaks: improved message bubble color palette, navigation, and error handling.
- Updated README and i18n files to document new features and screenshots.
- General code cleanup and minor bug fixes.

--- a/src/locales/en/profile.json
+++ b/src/locales/en/profile.json
@@ -62,7 +62,13 @@
         "country": "Country",
         "city": "City",
         "username": "Username",
-        "genderDefault": "Choose your gender"
+        "genderDefault": "Choose your gender",
+        "genderOptions": {
+          "male": "Male",
+          "female": "Female",
+          "other": "Other"
+        }
+
       },
       "validation": {
         "bioMaxLength": "Bio cannot exceed 100 characters",
