Improve responsive design and fix optimistic update in connection system
- Fixed optimistic update logic in connections to properly update or remove entities from the cache using consistent key factories.
- Enhanced responsive behavior of the "Create Post" button: now displayed beside the search bar on desktop and repositioned below on smaller screens.
- Refactored layout and logic in several profile group components, including new modal for managing group members.
- Adjusted UI components for better consistency and user experience (e.g., spacing, button behaviors).
- Updated translations for profile group in both English and Spanish locales.
- Minor style adjustments and improvements across UI components.

--- a/src/locales/en/profileGroup.json
+++ b/src/locales/en/profileGroup.json
@@ -26,6 +26,7 @@
     "deleteGroup": "Delete Group",
     "confirmDelete": "Are you sure you want to delete this group? This action cannot be undone.",
     "confirmLeave": "Are you sure you want to leave this group?",
+    "confirmRemove": "Are you sure you want to remove this member from the group?",
     "role": "Role",
     "admin": "Admin",
     "member": "Member",
@@ -34,6 +35,7 @@
     "save": "Save",
     "cancel": "Cancel",
     "add": "Add",
+    "adding": "Adding...",
     "groupMembers": "Group Members",
     "profileIdLabel": "Profile ID",
     "profileIdPlaceholder": "Enter profile ID",
